Kubeasz/ingress-nginx/example/02/myapp-ingress-redirect.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://www.baidu.com
  name: myapp-ingress-redirect
  namespace: learn-ingress
spec:
  rules:
  - host: myapp.redirect.io
    http:
      paths:
      - backend:
          service:
            name: myapp-svc
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
